# A2X-marketplace

./: .gitignore  COMPONENT_ANALYSIS.md  INSTALLATION.md  README.md  RTL_CHEATSHEET.md  RTL_CLAUDE_ALIASES.md  RTL_HEBREW_SUPPORT_GUIDE.md  RTL_USAGE_GUIDE.md  RTL_WITH_CLAUDE_CODE.md  demo-hebrew-output.sh  rtl-utils.sh  test-rtl-aligned.sh  test-rtl.sh
.claude-plugin/: marketplace.json
.octocode/generate/memory-management-plugin/: COMPLETION_SUMMARY.md  plan.md  research.md
.serena/: project.yml
plugins/claude-memory/: mcp-config.json
plugins/claude-memory/.claude-plugin/: plugin.json
plugins/claude-memory/mcp-server/: .gitignore  package.json
plugins/iterm2-control/: README.md
plugins/iterm2-control/.claude-plugin/: plugin.json
plugins/iterm2-control/commands/: create-terminal.md  list-terminals.md  shared-session.md
plugins/iterm2-control/skills/: debug-with-user.md  monitor-build.md  run-and-monitor.md
plugins/mactools/: README.md  mcp-config.json
plugins/mactools/.claude-plugin/: plugin.json
plugins/mactools/commands/: shared-session.md  terminal.md
plugins/mactools/iterm2-mcp/: __init__.py  __main__.py  pyproject.toml  server.py
plugins/mactools/iterm2-mcp/src/: iterm_controller.py  models.py  session_manager.py
plugins/mactools/iterm2-mcp/src/tools/: __init__.py  iterm_tools.py
plugins/mactools/skills/: collaborative-debug.md  terminal-automation.md
plugins/maya-toolkit/.claude-plugin/: plugin.json
plugins/thh10x/: README.md
plugins/thh10x/.claude-plugin/: plugin.json
plugins/thh10x/commands/: create-terminal.md  (+1 more)
(+9 files in other folders)
